Bug 773651 Guess VK_RCONTROL and VK_RMENU from extended key flag on XP and don't trust the scan code of key messages r=jimm